[package]
name = "restore_dates"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "=1.1.6"
serde = { version = "=1.0.127", features = ["derive"] }
chrono = { version = "=0.4.19", features = ["serde"] }
chrono-tz = "=0.5.3"